# ufaas-fastapi-business

./: README.md  pyproject.toml
src/base_models/: handlers.py  routes.py  tasks.py
src/fastapi_mongo_base/: cached.py  handlers.py  models.py  routes.py  schemas.py  tasks.py
src/fastapi_mongo_base/_utils/: aionetwork.py  basic.py  bsontools.py  texttools.py
src/fastapi_mongo_base/business/: middlewares.py  routes.py
src/ufaas_fastapi_business/: middlewares.py  models.py  routes.py  schemas.py
src/ufaas_fastapi_business/core/: app_auth.py  config.py  enums.py  exceptions.py
